--- a/Chatta-mobile/Chatta/Chatta.csproj
+++ b/Chatta-mobile/Chatta/Chatta.csproj
@@ -11,15 +11,32 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="4.0.0.709238" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
-    <PackageReference Include="MvvmLight" Version="5.4.1.1" />
-    <PackageReference Include="MvvmLightLibs" Version="5.4.1.1" />
+    <PackageReference Include="Xamarin.Forms" Version="4.5.0.657" />
     <PackageReference Include="Xam.Plugin.Media" Version="4.0.1.5" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="MvvmLight" Version="5.4.1.1" />
+    <PackageReference Include="CommonServiceLocator" Version="2.0.5" />
+    <PackageReference Include="Xam.Plugins.Settings" Version="3.1.1" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.5.3.1" />
+    <PackageReference Include="MvvmLightLibs" Version="5.4.1.1" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Model\" />
     <Folder Include="Pages\" />
-    <Folder Include="ViewMdel\" />
+    <Folder Include="ViewModel\" />
+    <Folder Include="ViewModel\Base\" />
+    <Folder Include="Services\" />
+    <Folder Include="Enums\" />
+    <Folder Include="Utils\" />
+    <Folder Include="Helpers\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="ViewMdel\ViewModelLocator.cs" />
+    <Compile Remove="ViewMdel\MainViewModel.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Update="App1.xaml.cs">
+      <DependentUpon>App1.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
 </Project>
