--- a/Chatta-mobile/Chatta.Android/packages.config
+++ b/Chatta-mobile/Chatta.Android/packages.config
@@ -3,6 +3,12 @@
   <package id="CommonServiceLocator" version="2.0.5" targetFramework="monoandroid90" />
   <package id="MvvmLight" version="5.4.1.1" targetFramework="monoandroid90" />
   <package id="MvvmLightLibs" version="5.4.1.1" targetFramework="monoandroid90" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="monoandroid90" />
+  <package id="sqlite-net-pcl" version="1.6.292" targetFramework="monoandroid90" />
+  <package id="SQLitePCLRaw.bundle_green" version="1.1.13" targetFramework="monoandroid90" />
+  <package id="SQLitePCLRaw.core" version="1.1.13" targetFramework="monoandroid90" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.android" version="1.1.13" targetFramework="monoandroid90" />
+  <package id="SQLitePCLRaw.provider.e_sqlite3.android" version="1.1.13" targetFramework="monoandroid90" />
   <package id="Xam.Plugins.Settings" version="3.1.1" targetFramework="monoandroid90" />
   <package id="Xamarin.Android.Arch.Core.Common" version="1.1.1.3" targetFramework="monoandroid90" />
   <package id="Xamarin.Android.Arch.Core.Runtime" version="1.1.1.3" targetFramework="monoandroid90" />
