--- a/Chatta-mobile/Chatta/Chatta.csproj
+++ b/Chatta-mobile/Chatta/Chatta.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="Xam.Plugins.Settings" Version="3.1.1" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.1" />
     <PackageReference Include="MvvmLightLibs" Version="5.4.1.1" />
+    <PackageReference Include="sqlite-net-pcl" Version="1.6.292" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Model\" />
@@ -36,7 +37,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Update="App1.xaml.cs">
-      <DependentUpon>App1.xaml</DependentUpon>
+      <DependentUpon>App.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
 </Project>
