--- a/Chatta-mobile/Chatta.Android/packages.config
+++ b/Chatta-mobile/Chatta.Android/packages.config
@@ -1,14 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="2.0.5" targetFramework="monoandroid90" />
-  <package id="MvvmLight" version="5.4.1.1" targetFramework="monoandroid90" />
-  <package id="MvvmLightLibs" version="5.4.1.1" targetFramework="monoandroid90" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="monoandroid90" />
+  <package id="Prism.Core" version="7.2.0.1422" targetFramework="monoandroid90" />
+  <package id="Prism.Forms" version="7.2.0.1422" targetFramework="monoandroid90" />
+  <package id="Prism.Unity.Forms" version="7.2.0.1422" targetFramework="monoandroid90" />
   <package id="sqlite-net-pcl" version="1.6.292" targetFramework="monoandroid90" />
   <package id="SQLitePCLRaw.bundle_green" version="1.1.13" targetFramework="monoandroid90" />
   <package id="SQLitePCLRaw.core" version="1.1.13" targetFramework="monoandroid90" />
   <package id="SQLitePCLRaw.lib.e_sqlite3.android" version="1.1.13" targetFramework="monoandroid90" />
   <package id="SQLitePCLRaw.provider.e_sqlite3.android" version="1.1.13" targetFramework="monoandroid90" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="monoandroid90" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="monoandroid90" />
+  <package id="Unity.Abstractions" version="5.11.1" targetFramework="monoandroid90" />
+  <package id="Unity.Container" version="5.11.1" targetFramework="monoandroid90" />
   <package id="Xam.Plugins.Settings" version="3.1.1" targetFramework="monoandroid90" />
   <package id="Xamarin.Android.Arch.Core.Common" version="1.1.1.3" targetFramework="monoandroid90" />
   <package id="Xamarin.Android.Arch.Core.Runtime" version="1.1.1.3" targetFramework="monoandroid90" />
